fix nav word break on moble

--- a/assets/scss/results.scss
+++ b/assets/scss/results.scss
@@ -68,6 +68,7 @@
     width: 100%;
     padding: 10px 15px;
     text-align: center;
+    word-break: keep-all;
 
     @media (max-width: 600px) {
       font-size: 1em;
